--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             min-height: 100vh;
             display: flex;
             align-items: center;
-            justify-content: center;
+            justify-content: space-between;
         }
 
         .container {
@@ -89,7 +89,7 @@
             color: #000000;
             text-decoration: none;
             font-size: 1.1rem;
-            padding: 0.8rem 1.5rem;
+            padding: 1rem 1.5rem;
             border: 2px solid #2c3e50;
             border-radius: 5px;
             transition: all 0.3s ease;
@@ -97,7 +97,7 @@
         }
 
         .nav-link:hover {
-            background-color: #2c3e50;
+            background-color: #000000;
             color: white;
             transform: translateY(-2px);
             box-shadow: 0 4px 8px rgba(44, 62, 80, 0.2);
@@ -145,14 +145,15 @@
         <h1>Jasmine Han</h1>
         
         <p class="bio">
-            Welcome! I'm currently a data scientist on Walmart Economics broadly interested in labor economics. 
-            I graduated from the University of Chicago in 2024 as an Economics + Computational and Applied Math major. 
+            Welcome! I'm currently a data scientist on Walmart Economics with broad interests in labor economics. 
+            In 2024, I graduated from UChicago as an Economics + Computational and Applied Math major. 
+            Feel free to reach out at jasminehan [at] uchicago [dot] edu. You can find my CV <a href="https://www.w3schools.com/">here</a>.
         </p>
         
         <nav class="navigation">
-            <a href="cv.html" class="nav-link">CV</a>
+            <a href="CV.html" class="nav-link">CV</a>
             <a href="research.html" class="nav-link">Research</a>
-            <a href="contact.html" class="nav-link">Contact</a>
+            <a href="software.html" class="nav-link">Software</a>
             <a href="personal.html" class="nav-link">Personal</a>
         </nav>
     </div>
