--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
             min-height: 100vh;
             display: flex;
             align-items: center;
-            justify-content: space-between;
+            justify-content: center;
         }
 
         .container {
-            text-align: center;
+            text-align: space-between;
             max-width: 600px;
             padding: 2rem;
         }
@@ -147,11 +147,11 @@
         <p class="bio">
             Welcome! I'm currently a data scientist on Walmart Economics with broad interests in labor economics. 
             In 2024, I graduated from UChicago as an Economics + Computational and Applied Math major. 
-            Feel free to reach out at jasminehan [at] uchicago [dot] edu. You can find my CV <a href="https://www.w3schools.com/">here</a>.
+            <br>Feel free to reach out at jasminehan [at] uchicago [dot] edu.
         </p>
         
         <nav class="navigation">
-            <a href="CV.html" class="nav-link">CV</a>
+            <a href="CV.pdf" class="nav-link">CV</a>
             <a href="research.html" class="nav-link">Research</a>
             <a href="software.html" class="nav-link">Software</a>
             <a href="personal.html" class="nav-link">Personal</a>
