fixed text alignment

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         }
 
         .container {
-            text-align: space-between;
+            text-align: center;
             max-width: 600px;
             padding: 2rem;
         }
@@ -76,6 +76,7 @@
             max-width: 500px;
             margin-left: auto;
             margin-right: auto;
+            text-align: justify;
         }
 
         .navigation {
@@ -145,9 +146,13 @@
         <h1>Jasmine Han</h1>
         
         <p class="bio">
-            Welcome! I'm currently a data scientist on Walmart Economics with broad interests in labor economics. 
-            In 2024, I graduated from UChicago as an Economics + Computational and Applied Math major. 
-            <br>Feel free to reach out at jasminehan [at] uchicago [dot] edu.
+            Welcome! I'm currently a data scientist on Walmart Economics. 
+            I graduated from UChicago in 2024 with degrees in Economics and Computational and Applied Math. 
+            My research interests lie broadly in labor economics.
+        </p>
+
+         <p class="bio">
+            Feel free to reach out at jasminehan [at] uchicago [dot] edu.
         </p>
         
         <nav class="navigation">
