adding research section

--- a/index.html
+++ b/index.html
@@ -188,7 +188,11 @@
         <!-- Research Section -->
         <div id="research-section" class="content-section">
             <p class="bio">
-                WIP
+                <b>Works in Progress</b>
+            </p>
+
+            <p class="bio">
+                1. Evaluating "breakfast after the bell" with regression discontinuity extrapolation <a href="BATB_thesis_draft.pdf" class="nav-link">[link]</a>
             </p>
         </div>
 
