--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             </p>
 
             <p class="bio">
-                1. Evaluating "breakfast after the bell" with regression discontinuity extrapolation <a href="BATB_thesis_draft.pdf" class="nav-link">[link]</a>
+                1. Evaluating "breakfast after the bell" with regression discontinuity extrapolation <a href="BATB_thesis_draft.pdf">[link]</a>
             </p>
         </div>
 
